Fix Navigation Title dimension on mobile to fit a single line

--- a/less/agency.less
+++ b/less/agency.less
@@ -88,7 +88,7 @@ h1, h2, h3, h4, h5, h6 {
 	.navbar-brand {
 		color: #fff;
 		font-weight: 300;
-		min-width: 300px;
+		min-width: 270px;
 		#logo {
 			max-height: 30px;
       width: 20px;
